; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/arm/extr_at91_ether.c_at91ether_close.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/arm/extr_at91_ether.c_at91ether_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.at91_private = type { i32 }

@AT91_EMAC_CTL = common dso_local global i32 0, align 4
@AT91_EMAC_TE = common dso_local global i64 0, align 8
@AT91_EMAC_RE = common dso_local global i64 0, align 8
@AT91_EMAC_IDR = common dso_local global i32 0, align 4
@AT91_EMAC_RCOM = common dso_local global i64 0, align 8
@AT91_EMAC_RBNA = common dso_local global i64 0, align 8
@AT91_EMAC_TUND = common dso_local global i64 0, align 8
@AT91_EMAC_RTRY = common dso_local global i64 0, align 8
@AT91_EMAC_TCOM = common dso_local global i64 0, align 8
@AT91_EMAC_ROVR = common dso_local global i64 0, align 8
@AT91_EMAC_ABT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*)* @at91ether_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @at91ether_close(%struct.net_device* %0) #0 {
  %2 = alloca %struct.net_device*, align 8
  %3 = alloca %struct.at91_private*, align 8
  %4 = alloca i64, align 8
  store %struct.net_device* %0, %struct.net_device** %2, align 8
  %5 = load %struct.net_device*, %struct.net_device** %2, align 8
  %6 = call %struct.at91_private* @netdev_priv(%struct.net_device* %5)
  store %struct.at91_private* %6, %struct.at91_private** %3, align 8
  %7 = load i32, i32* @AT91_EMAC_CTL, align 4
  %8 = call i64 @at91_emac_read(i32 %7)
  store i64 %8, i64* %4, align 8
  %9 = load i32, i32* @AT91_EMAC_CTL, align 4
  %10 = load i64, i64* %4, align 8
  %11 = load i64, i64* @AT91_EMAC_TE, align 8
  %12 = load i64, i64* @AT91_EMAC_RE, align 8
  %13 = or i64 %11, %12
  %14 = xor i64 %13, -1
  %15 = and i64 %10, %14
  %16 = call i32 @at91_emac_write(i32 %9, i64 %15)
  %17 = load %struct.net_device*, %struct.net_device** %2, align 8
  %18 = call i32 @disable_phyirq(%struct.net_device* %17)
  %19 = load i32, i32* @AT91_EMAC_IDR, align 4
  %20 = load i64, i64* @AT91_EMAC_RCOM, align 8
  %21 = load i64, i64* @AT91_EMAC_RBNA, align 8
  %22 = or i64 %20, %21
  %23 = load i64, i64* @AT91_EMAC_TUND, align 8
  %24 = or i64 %22, %23
  %25 = load i64, i64* @AT91_EMAC_RTRY, align 8
  %26 = or i64 %24, %25
  %27 = load i64, i64* @AT91_EMAC_TCOM, align 8
  %28 = or i64 %26, %27
  %29 = load i64, i64* @AT91_EMAC_ROVR, align 8
  %30 = or i64 %28, %29
  %31 = load i64, i64* @AT91_EMAC_ABT, align 8
  %32 = or i64 %30, %31
  %33 = call i32 @at91_emac_write(i32 %19, i64 %32)
  %34 = load %struct.net_device*, %struct.net_device** %2, align 8
  %35 = call i32 @netif_stop_queue(%struct.net_device* %34)
  %36 = load %struct.at91_private*, %struct.at91_private** %3, align 8
  %37 = getelementptr inbounds %struct.at91_private, %struct.at91_private* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = call i32 @clk_disable(i32 %38)
  ret i32 0
}

declare dso_local %struct.at91_private* @netdev_priv(%struct.net_device*) #1

declare dso_local i64 @at91_emac_read(i32) #1

declare dso_local i32 @at91_emac_write(i32, i64) #1

declare dso_local i32 @disable_phyirq(%struct.net_device*) #1

declare dso_local i32 @netif_stop_queue(%struct.net_device*) #1

declare dso_local i32 @clk_disable(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
